fix: resolve CorsConfigurationSource bean conflict
- Update existing CorsConfig.java to read CORS_ALLOWED_ORIGINS env var
- Remove duplicate corsConfigurationSource bean from SecurityConfig
- Inject CorsConfigurationSource into SecurityConfig constructor